fix(frontend): wrapping of code in summary lists

--- a/packages/frontend/components/summary/styles.css
+++ b/packages/frontend/components/summary/styles.css
@@ -30,6 +30,10 @@
   padding: 0;
 }
 
+.summary__value code {
+  word-break: break-word;
+}
+
 .summary__value small code {
   margin-inline-start: var(--space-2xs);
 }
